--- a/t14/package.json
+++ b/t14/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "t14",
   "version": "1.0.0",
@@ -10,12 +9,23 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~54.0.20",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@mui/icons-material": "^7.3.4",
+    "@mui/material": "^7.3.4",
+    "expo": "54.0.22",
     "expo-status-bar": "~3.0.8",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
+    "react-native-safe-area-context": "^5.6.2",
     "react-native-web": "0.21.2"
   },
-  "private": true
+  "private": true,
+  "devDependencies": {
+    "@types/jest": "^29.5.14",
+    "@types/react": "~19.1.10",
+    "@types/react-native": "^0.73.0",
+    "typescript": "~5.9.2"
+  }
 }
