--- a/t14/package.json
+++ b/t14/package.json
@@ -11,24 +11,31 @@
     "clear": "expo start --clear"
   },
   "dependencies": {
-    "expo": "~54.0.0",
-    "expo-status-bar": "~3.0.8",
-    "react": "19.1.0",
-    "react-native": "0.81.5",
+    "@expo/vector-icons": "^15.0.3",
+    "@react-native-async-storage/async-storage": "2.2.0",
+    "@react-navigation/bottom-tabs": "^7.0.0",
     "@react-navigation/native": "^7.0.0",
     "@react-navigation/native-stack": "^7.6.2",
-    "@react-navigation/bottom-tabs": "^7.0.0",
-    "react-native-screens": "~4.16.0",
-    "react-native-safe-area-context": "~5.6.0",
+    "babel-preset-expo": "~54.0.0",
+    "expo": "^54.0.23",
+    "expo-status-bar": "~3.0.8",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "react-native": "0.81.5",
     "react-native-gesture-handler": "~2.28.0",
-    "@react-native-async-storage/async-storage": "2.2.0",
-    "@expo/vector-icons": "^15.0.3",
+    "react-native-paper": "^5.14.5",
+    "react-native-safe-area-context": "~5.6.0",
+    "react-native-screens": "~4.16.0",
+    "react-native-vector-icons": "^10.3.0",
+    "react-native-web": "^0.21.0",
     "sweetalert2": "^11.14.0"
   },
   "devDependencies": {
-    "typescript": "^5.6.3",
-    "@types/react": "~19.1.10",
     "@babel/core": "^7.25.0",
-    "babel-preset-expo": "^11.0.0"
+    "@types/react": "~19.1.10",
+    "@types/react-native": "^0.73.0",
+    "@types/react-native-vector-icons": "^6.4.18",
+    "babel-preset-expo": "~54.0.0",
+    "typescript": "^5.6.3"
   }
 }
