--- a/t14/package.json
+++ b/t14/package.json
@@ -12,13 +12,14 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^15.0.3",
-    "@react-native-async-storage/async-storage": "2.2.0",
+    "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-navigation/bottom-tabs": "^7.0.0",
     "@react-navigation/native": "^7.0.0",
     "@react-navigation/native-stack": "^7.6.2",
     "babel-preset-expo": "~54.0.0",
     "expo": "^54.0.23",
     "expo-status-bar": "~3.0.8",
+    "firebase": "^12.6.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-native": "0.81.5",
@@ -28,6 +29,7 @@
     "react-native-screens": "~4.16.0",
     "react-native-vector-icons": "^10.3.0",
     "react-native-web": "^0.21.0",
+    "resend": "^6.5.2",
     "sweetalert2": "^11.14.0"
   },
   "devDependencies": {
